# maier-saupe-lc-hydrodynamics

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Questions.md  README.md  ToDo.md  Todo.org  compile_commands.json  env.sh  from-the-ground-up.md  installation.md  notes_on_restructuring.md  restructuring_todo.org  simulation_parameters.prm
app/: CMakeLists.txt  bulk_free_energy_calculation.cpp
app/analysis/: CMakeLists.txt  LdG_to_frank.py  animate_vtu_file.py  calc_Q_tensor_eigensystem.py  calc_eigenvalue_fourier_modes.py  calc_energy_landscape.py  calc_energy_minima.py  calc_lambda.cpp  calc_minimum_energy_S.py  calc_modified_uniaxial_singular_potential.py  calc_theta_c_from_Q.py  calc_uniaxial_singular_potential.py  compare_rhs_values.cpp  comparing-to-cody-data.py  comparing_to_cody_data.py  convert_cody_data_hdf5.py  core_structure_from_vtu.py  create_h5_for_center.py  create_h5_for_fixed_defects.py  create_h5_for_one_defect_structure.py  create_h5_for_two_defect_structure.py  director_angle_from_vtu.py  director_angle_paraview.py  director_fourier_components.py  find_defect_centers.py  generate_periodic_Q_tensors.py  generate_periodic_Q_tensors_multiple_eps.py  get_points_around_defects.cpp  get_points_around_one_defect.cpp  get_theta_c_from_vtu.py  get_values_at_vtu_points.py  iso_steady_state_mpi_debugging.py  match_bulk_free_energy_params.py  output-cody-data.cpp  output_cody_data.cpp  plot_Q1_amplitudes.py  plot_anisotropic_core_director.py  plot_bulk_free_energy.py  plot_coalescence_times.py  plot_configuration_energies.py  (+18 more)
app/examples/: CMakeLists.txt  active_flow_solver.cpp  ad_rotation_matrix.cpp  analytic_degenerate_eigenvalue.cpp  analytic_eigenvector_derivative.cpp  analytic_reduced_lagrange.cpp  atan_test.cpp  bit_test.cpp  boundary_values_parameter_pack.cpp  calculate_defect_quantities.cpp  check_anisotropic_elasticity.cpp  check_defect_domains.cpp  check_diagonalization_schemes.cpp  check_rotations.cpp  check_set_order.cpp  comparing_autogen_code.cpp  dealii_function_test.cpp  dealii_hdf5_write.cpp  dealii_mpi_allgather.cpp  dealii_subdivided_grid.cpp  defect_grid_generator.cpp  deserialize_liquid_crystal.cpp  deserialize_nematic_mpi.cpp  distributed_vector_hdf5_example.cpp  dzyaloshinskii_function.cpp  efficient_lagrange_multiplier.cpp  eigen_test.cpp  find_local_minima.cpp  grid_level_test.cpp  high_five_example.cpp  lagrange_continuity_check.cpp  lagrange_copy_test.cpp  lagrange_multiplier_analytic_test.cpp  lagrange_test.cpp  lagrange_time_test.cpp  lebedev_pointer_test.cpp  linear_interpolation_example.cpp  linspace_test.cpp  lu_matrix_test.cpp  max_element.cpp  (+51 more)
app/simulations/: BasicLiquidCrystalSim.cpp  CMakeLists.txt  ChiralDirectorSystemSim.cpp  DzyaloshinskiiSystemSim.cpp  HydroFixedConfigurationSim.cpp  HydroFixedLCSim.cpp  HydroSystemMPISim.cpp  IsoSteadyState.cpp  IsoSteadyStateMPISim.cpp  IsoSteadyStateSim.cpp  IsoTimeDependentHydroSim.cpp  IsoTimeDependentMPISim.cpp  IsoTimeDependentSim.cpp  NematicHydroSystemMPISim.cpp  NematicSystemMPISim.cpp  PerturbativeDirectorSystemSim.cpp  bulk_free_energy_calculation.cpp  periodic_singular_potential.cpp
app/theory/: initial-residual-jacobian-values.py
app/util/: CMakeLists.txt
examples/data_to_fe_object/: CMakeLists.txt  data_to_fe_object.cpp
examples/output_cody_data/: CMakeLists.txt  output_cody_data.cpp
scripts/IsoSteadyState/: CMakeLists.txt  comparing-to-cody-data.py  read-defect-print-to-grid.cpp
scripts/bulk-free-energy-calculation/: CMakeLists.txt  bulk_free_energy_calculation.cpp  plot_data.py
src/: CMakeLists.txt  LUMatrix.cpp  LUMatrixGPU.cu  LUMatrixGPU.inst  LU_Matrix.cpp  LU_Matrix.inst  LagrangeGPUWrapper.cu  LagrangeMultiplier.cpp  LagrangeMultiplier.h  LagrangeMultiplier.hpp  LagrangeMultiplier.inst  lagrange_test.cpp  maier_saupe_constants.hpp  output.txt
src/BoundaryValues/: BoundaryValues.cpp  BoundaryValues.hpp  BoundaryValuesFactory.cpp  BoundaryValuesFactory.hpp  BoundaryValuesInterface.hpp  CMakeLists.txt  DefectConfiguration.cpp  DefectConfiguration.hpp  DzyaloshinskiiFunction.cpp  DzyaloshinskiiFunction.hpp  EscapedRadial.cpp  EscapedRadial.hpp  MultiDefectConfiguration.cpp  MultiDefectConfiguration.hpp  PeriodicBoundaries.hpp  PeriodicConfiguration.cpp  PeriodicConfiguration.hpp  PeriodicSConfiguration.cpp  PeriodicSConfiguration.hpp  PerturbativeTwoDefect.cpp  PerturbativeTwoDefect.hpp  TwistedTwoDefect.cpp  TwistedTwoDefect.hpp  TwoDefectConfiguration.cpp  TwoDefectConfiguration.hpp  UniformConfiguration.cpp  UniformConfiguration.hpp
src/Couplers/: CMakeLists.txt  NematicHydroMPICoupler.cpp  NematicHydroMPICoupler.hpp
src/ExampleFunctions/: CMakeLists.txt  PeriodicMu2StressTensor.hpp  PeriodicQTensor.hpp  PlusHalfActiveSource.hpp  PlusHalfQTensor.hpp  Step55ExactSolution.hpp  Step55RightHandSide.hpp  TensorToVector.hpp  TwoDefectQTensor.hpp
src/Factory/: CMakeLists.txt  ConfigurableFunction.hpp  Factory.hpp  Function.cpp  Function.hpp  README.md
src/FunctionFactory/: CMakeLists.txt  Factory.cpp  Factory.hpp  Function.cpp  Function.hpp
src/InitialValues/: InitialValues.hpp
src/LiquidCrystalSystems/: CMakeLists.txt  ChiralDirectorSystem.cpp  ChiralDirectorSystem.hpp  DzyaloshinskiiSystem.cpp  DzyaloshinskiiSystem.hpp  HydroFixedConfiguration.cpp  HydroFixedConfiguration.hpp  HydroSystemMPI.cpp  HydroSystemMPI.hpp  IsoSteadyState.cpp  IsoSteadyState.hpp  IsoSteadyState.inst  IsoSteadyStateMPI.cpp  IsoSteadyStateMPI.hpp  IsoSteadyStateMPI.inst  IsoTimeDependent.cpp  IsoTimeDependent.hpp  IsoTimeDependent.inst  IsoTimeDependentHydro.cpp  IsoTimeDependentHydro.hpp  IsoTimeDependentHydro.inst  IsoTimeDependentMPI.cpp  IsoTimeDependentMPI.hpp  IsoTimeDependentMPI.inst  LiquidCrystalSystem.cpp  LiquidCrystalSystem.hpp  NematicSystemMPI.cpp  NematicSystemMPI.hpp  PerturbativeDirectorSystem.cpp  PerturbativeDirectorSystem.hpp
src/Numerics/: CMakeLists.txt  (+24 more)
test/: CMakeLists.txt  boundary_values_test.cpp  factory_test.cpp  iso_steady_state_test.cpp  lagrange_multiplier_test.cpp  main_test.cpp
tests/: CMakeLists.txt  compile_commands.json
(+1915 files in other folders)
